<resources>
    <string name="app_name">MyApp</string>

    <!--Controls-->
    <string name="controls_demo_activity">Controls Demo</string>
    <string name="tvtext1">I am a TextView</string>
    <string name="tvtext2">The field below can Autocomplete</string>
    <string name="tvtext3">Below is a MultiLine AutoComplete</string>
    <string name="edittexthint">This is an EditText</string>
    <string name="AutoCompleteHintText1">AutoComplete</string>
    <string name="MultiAutoCompleteHintText1">MultiAutoComplete</string>
    <string name="title_activity_list_demo">List Demo</string>
    <string name="title_gridview_custom_adapter">Custom Adapter</string>
    <string name="styledText"><i>Static</i> style in a <b>TextView</b>.</string>

    <string name="prefTitle">My Preferences</string>
    <string name="prefSummary">Set Flight Option Preferences</string>
    <string name="flight_sort_option_default_value">1</string>
    <string name="dialogTitle">Choose Flight Options</string>
    <string name="listSummary">Set Search Options</string>
    <string name="listTitle">Flight Options</string>
    <string name="flight_sort_option">flight_sort_option</string>
    <string name="menu_prefs_title">Settings</string>
    <item name="app_notification_id" type="id" />
    <string name="title_activity_login">Sign in</string>
    <string name="name_text">Name:</string>
    <string name="addr_text">Address:</string>
    <string name="spinnerprompt">Please Choose</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="remote_service_connected">Remote Service Connected</string>
    <string name="remote_service_disconnected">Remote Service Disconnected</string>

    <string name="remote_service_started">Remote Service started</string>
    <string name="remote_service_stopped">Remote Service stopped</string>
    <string name="remote_service_label">Remote Service label</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="help_text">
        \n
1. You are reading the help text for this test
program.
\n
2. Click the menu icon at top right
to see a list of available menu items.
\n
3. Click a dialog menu item
to see that dialog.
\n
4. In the emulator, you can flip the
orientation using Ctrl+F11 to see if
the dialogs work when the device is
rotated.
    </string>
    <string name="help1">
Here is more help text that could be displayed to the user in
a dialog. When the user clicks the Close button, the previous
dialog is re-displayed to them.
</string>
    <string name="title_activity_test_async_task_driver">TestAsyncTaskDriverActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello">
    Choose menu to fireoff a broadcast event.
    \n\nWatch the logcat for messages from various broadcast receivers
    in this process and also in the StandaloneBroadcastReceiver Process.
    \n\nSome basic debug messages will show here as well.
    \n\nTap Menu Now!
    </string>
    <string name="title_activity_test_alarms_driver">TestAlarmsDriverActivity</string>
    <string name="title_activity_frame_animation">FrameAnimationActivity</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="blue">#0000FF</color>
    <string name="title_activity_where_am_i">WhereAmIActivity</string>
    <string name="title_activity_geocoder">GeocoderActivity</string>
    <string name="title_activity_location_service">LocationServiceActivity</string>
    <string name="title_activity_audio_play">AudioPlayActivity</string>
    <string name="title_activity_sound_pool">SoundPoolActivity</string>
    <string name="title_activity_video_play">VideoPlayActivity</string>
    <string name="title_activity_configure_bday_widget">ConfigureBDayWidgetActivity</string>
    <string name="title_activity_boolean_button">BooleanButtonActivity</string>
    <string name="title_activity_multi_touch">MultiTouchActivity</string>
    <string name="title_activity_scale_gesture">ScaleGestureActivity</string>
    <string name="title_activity_sensor_list">SensorListActivity</string>
    <string name="title_activity_light_sensor">LightSensorActivity</string>
    <string name="title_activity_gravity_sensor">GravitySensorActivity</string>
    <string name="tpda_informational_message">
You can use this activity to test 2 types of Android storage. First approach
is to store objects using a content provider. The second approach is to
use SQLite directly. Buttons below invoke activities to test each approach.
</string>
    <string name="title_activity_test_loaders">TestLoadersActivity</string>
    <string name="tla_header">
This is a ListActivity with custom content view.
It contains this header, ListView and a footer.
ListView reads and displays all contacts.
ListView also filters contacts using the search view in the Actionbar.
List activity uses Loaders to load data asynchronously.
This activity can handle device rotation.
This activity also uses a progress bar to indicate data is being loaded.
</string>

    <string name="tla_footer">
This is the footer for the custom content view.
Although headers and footers can be done through a list view
this sample uses explicit text views.
</string>
    <string name="title_activity_test_contacts_driver">TestContactsDriverActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_layout">Layout</string>
    <string name="title_activity_menus_and_bars">Menus &amp; Bars</string>
    <string name="action_settings">Settings</string>


</resources>
