<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Controls.ControlsDemoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvtext1"/>
            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:ems="10"
                android:hint="@string/edittexthint"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText1"
                android:layout_below="@+id/editText1"
                android:layout_marginTop="20dp"
                android:text="@string/tvtext2"/>
            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:ems="10"
                android:hint="@string/AutoCompleteHintText1"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/autoCompleteTextView1"
                android:layout_below="@+id/autoCompleteTextView1"
                android:layout_marginTop="20dp"
                android:text="@string/tvtext3"/>
            <MultiAutoCompleteTextView
                android:id="@+id/multiAutoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/MultiAutoCompleteHintText1"/>
            <LinearLayout
                android:layout_alignLeft="@+id/multiAutoCompleteTextView1"
                android:layout_below="@id/multiAutoCompleteTextView1"
                android:id="@+id/btnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Basic Button"  />
                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/imagebuttonselector"/>
                <ToggleButton
                    android:id="@+id/cctglBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Toggle Button"
                    android:textOn="Stop"
                    android:textOff="Run"/>
            </LinearLayout>
            <LinearLayout
                android:layout_below="@+id/btnLayout"
                android:layout_marginTop="30dp"
                android:id="@+id/checkboxLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/chickenCB"
                    android:text="Chicken"
                    android:checked="true"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/fishCB"
                    android:text="Chicken"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/steakCB"
                    android:text="Chicken"
                    android:checked="true"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_below="@+id/checkboxLayout"
                android:layout_marginTop="30dp"
                android:id="@+id/switchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/switchControl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This switch is : off"/>
            </LinearLayout>
            <LinearLayout
                android:layout_below="@+id/switchLayout"
                android:layout_marginTop="30dp"
                android:id="@+id/radioLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/anotherRadBtn"
                    android:text="Outside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioGroup
                    android:id="@+id/rBtnGrp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/chRBtn"
                        android:text="Chicken"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/fishRBtn"
                        android:text="Fish"
                        android:checked="true"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/stkRBtn"
                        android:text="Steak"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="My Favorite"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_below="@+id/radioLayout"
                android:layout_marginTop="30dp"
                android:id="@+id/imageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image1"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon"/>
                <ImageView
                    android:id="@+id/image2"
                    android:layout_weight="1"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:src="#555555"/>
                <ImageView
                    android:id="@+id/image3"
                    android:layout_weight="1"
                    android:layout_width="50dip"
                    android:layout_height="50dip" />
                <ImageView
                    android:id="@+id/image4"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/robot"
                    android:scaleType="centerInside"
                    android:maxWidth="35dip"
                    android:maxHeight="50dip"/>
            </LinearLayout>
            <LinearLayout
                android:layout_below="@+id/imageLayout"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dateDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></DatePicker>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/timeDefault"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TimePicker
                            android:id="@+id/timePicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"></TimePicker>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextClock
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:format12Hour="hh:mm:ss aa" android:format24Hour="kk:mm:ss"/>
                        <AnalogClock
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
<!--                <com.google.android.maps.MapView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:clickable="true"
                    android:apiKey="myAPIKey"></com.google.android.maps.MapView>-->
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
